Fixed a couple links to work from new location

--- a/barovia/1barovia.html
+++ b/barovia/1barovia.html
@@ -66,7 +66,7 @@ app.start();
 // initialize dat-gui panel
 Q3D.gui.init();
 </script>
-<a href="http://zootlocker.com/?link=1">((Back to the main page))</a> There is a no-fog version of this map <a href="http://zootlocker.com/barovia/nofog.html">here</a>.<br>
+<a href="https://zootlocker.github.io/">((Back to the main page))</a> There is a no-fog version of this map <a href="https://zootlocker.github.io/barovia/nofog.html">here</a>.<br>
 This is an adaptation of the map of Barovia, <b>(C) Wizards of the Coast | Art by Mike Schley </b>(if you somehow made your way here before there, go check out his <a href="http://mikeschley.com/">portfolio</a>, it's great.)
 </body>
 </html>
